# bloodhound-automation

./: .gitignore  README.md  pyproject.toml  requirements.txt
bloodhound_automation/: bloodhound_automation.py
bloodhound_automation/src/: __init__.py  project.py
bloodhound_automation/templates/: docker-compose.yml
src/: project.py  utils.py
