# [project]
# name = "bloodhound-automation"
# version = "1.0.0"
# description = "Automatically run and populate a new instance of BH CE in docker"
# authors = [
#     {name = "aN0mad"}
# ]
# readme = "README.md"
# requires-python = ">=3.14"
# dependencies = [
#     "ansible-core (>=2.20.1,<3.0.0)",
#     "docker (>=7.1.0,<8.0.0)",
#     "pyyaml (>=6.0)",
#     "dockerpty (>=0.4.1,<0.5.0)",
#     "requests (>=2.32.5,<3.0.0)",
#     "urllib3 (>=2.6.2,<3.0.0)",
#     "colorama (>=0.4.6,<0.5.0)"
# ]


# [build-system]
# requires = ["setuptools>=68.0.0", "wheel"]
# build-backend = "setuptools.build_meta"

# [tool.setuptools.packages.find]
# where = ["."]
# include = ["bloodhound_automation*"]

# [tool.setuptools.package-data]
# bloodhound_automation = ["templates/*"]

# [project.scripts]
# bloodhound-automation = "bloodhound_automation.bloodhound_automation:main"
[tool.poetry]
name = "bloodhound-automation"
version = "1.0.0"
description = "Automatically run and populate a new instance of BH CE in docker"
authors = ["aN0mad"]
readme = "README.md"
packages = [{include = "bloodhound_automation"}]

[tool.poetry.dependencies]
python = "^3.14"
ansible-core = "^2.20.1"
docker = "^7.1.0"
pyyaml = "^6.0"
dockerpty = "^0.4.1"
requests = "^2.32.5"
urllib3 = "^2.6.2"
colorama = "^0.4.6"

[tool.poetry.scripts]
bloodhound-automation = "bloodhound_automation.bloodhound_automation:main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"